# agent

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py  vercel.json
config/: aws-config.yaml  config.yaml
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
src/ai_web_app/: __init__.py  crew_integration.py  logging_config.py  main.py
tests/: test_config.yaml  test_crew_integration.py  test_crew_intergration.py  test_main.py
