[tool.poetry]
name = "ai-web-app"
version = "0.1.0"
description = "AI-powered web application using Crew.ai"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = "^0.51.1"
flask = "^2.1.0"
boto3 = "^1.26.0"
python-dotenv = "^0.19.2"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]